--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.18.2",
+    "express-handlebars": "^5.3.0",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "mongodb": "4.4",
