--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-handlebars": "^5.3.0",
+    "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "mongodb": "4.4",
