--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http-errors": "~1.6.3",
     "mongodb": "4.4",
     "morgan": "~1.9.1",
+    "nocache": "^3.0.4",
     "nodemon": "^2.0.22"
   }
 }
