--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-handlebars": "^5.3.0",
