--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "4.4",
     "morgan": "~1.9.1",
     "nocache": "^3.0.4",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "razorpay": "^2.8.6"
   }
 }
