Added Admin side product Management Feature
# Added new collection for Product Categories

# Added Admin helpers to Add, View, Edit & Delete product categories

# Added a module called moment-timezone to display the Data and Time in a Organized fashion in product categories page

# Added Hbs files for Add, Edit & View product categories

# Modified the Add new product button in view products page

# Added product category Images to gitignore file

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
+    "moment-timezone": "^0.5.43",
     "mongodb": "4.4",
     "morgan": "~1.9.1",
     "nocache": "^3.0.4",
