--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-fileupload": "^1.4.0",
     "express-handlebars": "^5.3.0",
     "express-session": "^1.17.3",
+    "handlebars-helpers": "^0.10.0",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "moment-timezone": "^0.5.43",
