--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "nocache": "^3.0.4",
     "nodemon": "^2.0.22",
+    "pdfmake": "^0.2.7",
     "razorpay": "^2.8.6",
     "twilio": "^4.11.2"
   }
