--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI-CD
 
 on:
@@ -10,14 +7,12 @@ on:
     branches: [ "production-branch" ]
 
 jobs:
-  build:
-
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
@@ -34,3 +29,17 @@ jobs:
         echo .env
         cat .env
     - run: npm install
+    
+    # Deployment step
+    - name: Deploy to AWS EC2
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{secrets.EC2_PUBLIC_IP}}
+        username: ubuntu
+        key: ${{secrets.EC2_SSH_KEY}}
+        script: |
+          echo "Connected to AWS EC2 instance"
+          # Add the necessary deployment commands here
+          cd ExpressJs-Ecommerce-webdev-project-1
+          git pull
+          sudo pm2 reload all
