--- a/.github/workflows/main-branch-CI.yml
+++ b/.github/workflows/main-branch-CI.yml
@@ -35,6 +35,7 @@ jobs:
 
 
     # Printing the node version in the terminal
+    - name: Checking Node Version
     - run: node --version
 
     # Installation of Node packaging Manager (npm)
