--- a/.github/workflows/main-branch-CI.yml
+++ b/.github/workflows/main-branch-CI.yml
@@ -1,6 +1,5 @@
 # ===================================================== Main Branch CI Configuration =====================================================
 
-
 name: Main-Branch-CI
 
 on:
@@ -10,58 +9,45 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   Main-Branch-Pre-Integration-Tests:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [18.x]
-
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    # ========================== Runs the following commands on the newely created linux instance for integration testing ==========================
+      # ========================== Runs the following commands on the newly created Linux instance for integration testing ==========================
 
+      # Installing Node.js at the test instance
+      - name: Setting up Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
 
-    # Installing Node.js at the test instance
-    - name: Setting up Node.js ${{ matrix.node-version }}
-    
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+      # Printing the node version in the terminal
+      - name: Checking Node Version
+        run: node --version
 
+      # Installation of Node packaging Manager (npm)
+      - name: Installing Node packaging Manager (npm)
+        run: npm ci
 
-    # Printing the node version in the terminal
-    - name: Checking Node Version
-    - run: node --version
+      # Setting up the environment variable from using credentials stored in GitHub actions secret
+      - name: Seting-up environment variables
+        run: |
+          echo "MY_ENV_VARIABLE=${{ secrets.ENV_FILE }}" >> .env
+          cat .env
 
-    # Installation of Node packaging Manager (npm)
-    - name: Installing Node packaging Manager (npm)
-    - run: npm ci
+      # Installation of Node packaging Manager (npm)
+      - name: Installing project dependencies
+        run: npm install
 
-
-    # Setting up the environment variable from using credentials stored in Github actions secret
-    - name: Seting-up environment variables
-      run: |
-        echo "MY_ENV_VARIABLE=${{ secrets.ENV_FILE }}" >> .env
-        cat .env
-
-
-    # Installation of Node packaging Manager (npm)
-    - name: Installing project dependencies
-    - run: npm install
-
-    
-    # Checking if node modules was installed (Done by simply checking if node modules library exists or not)
-    - name: Checking if node_modules directory was created after installing NPM
-
-      run: |
-        if [ ! -d "node_modules" ]; then
-        
-          echo "Error: node_modules directory does not exist."
-          
-          exit 1
-        fi
+      # Checking if node modules were installed (Done by simply checking if the node_modules directory exists or not)
+      - name: Checking if node_modules directory was created after installing NPM
+        run: |
+          if [ ! -d "node_modules" ]; then
+            echo "Error: node_modules directory does not exist."
+            exit 1
+          fi
