--- a/.github/workflows/Production-Branch-Deployment-CI-CD.yml
+++ b/.github/workflows/Production-Branch-Deployment-CI-CD.yml
@@ -65,3 +65,34 @@ jobs:
           echo "Error: node_modules directory does not exist."
           exit 1
         fi
+
+  # ========================== Production-Branch-Deployment ==========================
+
+  Production-Branch-Deployment:
+
+    runs-on: ubuntu-latest
+
+    needs: Production-Branch-Pre-Deployment-Tests
+
+    # Deployment steps
+    steps:
+
+    - name: Deploying To Production Server
+
+      uses: appleboy/ssh-action@master
+
+      with:
+
+        host: ${{secrets.EC2_PUBLIC_IP}}
+
+        username: ubuntu
+
+        key: ${{secrets.EC2_SSH_KEY}}
+
+        script: |
+          echo "Connected to Production Server instance"
+          # Commands for deploying changes to server
+          
+          cd ExpressJs-Ecommerce-webdev-project-1
+          git pull
+          sudo pm2 reload all
