Added extra stage in CI to install PM2 and check status.

--- a/.github/workflows/Main-Branch-CI.yml
+++ b/.github/workflows/Main-Branch-CI.yml
@@ -51,3 +51,15 @@ jobs:
             echo "Error: node_modules directory does not exist."
             exit 1
           fi
+
+    # Installation of Process Manager 2 (PM2)
+    - name: Installing Process Manager 2 (PM2)
+      run: npm i pm2 -g
+
+    # Start the application with Process Manager 2 (PM2)
+    - name: Initiating the application with Process Manager 2 (PM2)
+      run: pm2 start ./bin/www --name "production-server"
+
+    # Log the status of application with Process Manager 2 (PM2)
+    - name: Logging the status of application with Process Manager 2 (PM2)
+      run: pm2 status all
