--- a/.github/workflows/Production-Branch-Deployment-CI-CD.yml
+++ b/.github/workflows/Production-Branch-Deployment-CI-CD.yml
@@ -60,6 +60,18 @@ jobs:
           exit 1
         fi
 
+    # Installation of Process Manager 2 (PM2)
+    - name: Installing Process Manager 2 (PM2)
+      run: npm i pm2 -g
+
+    # Start the application with Process Manager 2 (PM2)
+    - name: Initiating the application with Process Manager 2 (PM2)
+      run: pm2 start ./bin/www --name "production-server"
+
+    # Log the status of application with Process Manager 2 (PM2)
+    - name: Logging the status of application with Process Manager 2 (PM2)
+      run: pm2 status all
+
   # ========================== Production-Branch-Deployment ==========================
 
   Production-Branch-Deployment:
