Configuring test to check if env file exist or not.

--- a/.github/workflows/Main-Branch-CI.yml
+++ b/.github/workflows/Main-Branch-CI.yml
@@ -30,19 +30,19 @@ jobs:
       - name: Installing Node packaging Manager (npm)
         run: npm ci
 
-      # Setting up the environment variable using credentials stored in GitHub actions secret
+      # Setting up the environment variable from using credentials stored in GitHub actions secret
       - name: Setting up environment variables
         run: |
           echo "MY_ENV_VARIABLE=${{ secrets.ENV_FILE }}" >> .env
 
-    # Verify if .env file was created from action secrets
-    - name: Verifying if .env file was created from action secrets
-      run: test -f .env
+          # Verify if .env file was created from action secrets
+          test -f .env
 
-    # Exit the pipeline with an error if .env file doesn't exist
-    - name: Exiting the process if .env file does not exist
-      run: exit 1
-      if: ${{ failure() }}
+          # Exit the pipeline with an error if .env file doesn't exist
+          if [ $? -ne 0 ]; then
+            echo "Error: .env file does not exist."
+            exit 1
+          fi
 
       # Installation of Node packaging Manager (npm)
       - name: Installing project dependencies
