--- a/.github/workflows/Production-Branch-Deployment-CI-CD.yml
+++ b/.github/workflows/Production-Branch-Deployment-CI-CD.yml
@@ -47,14 +47,14 @@ jobs:
       run: |
         echo "MY_ENV_VARIABLE=${{ secrets.ENV_FILE }}" >> .env
 
-    # Verify if .env file was created from action secrets
-    - name: Verifying if .env file was created from action secrets
-      run: test -f .env
+        # Verify if .env file was created from action secrets
+        test -f .env
 
-    # Exit the pipeline with an error if .env file doesn't exist
-    - name: Exiting the process if .env file does not exist
-      run: exit 1
-      if: ${{ failure() }}
+        # Exit the pipeline with an error if .env file doesn't exist
+        if [ $? -ne 0 ]; then
+          echo "Error: .env file does not exist."
+          exit 1
+        fi
 
     # Installation of Node packaging Manager (npm)
     - name: Installing project dependencies
