--- a/.github/workflows/Production-Branch-Pre-Merge-CI.yml
+++ b/.github/workflows/Production-Branch-Pre-Merge-CI.yml
@@ -21,8 +21,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    # ========================== Runs the following commands on the newly created Linux instance for integration testing ==========================
-
     # Installing Node.js at the test instance
     - name: Setting up Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
@@ -43,14 +41,14 @@ jobs:
       run: |
         echo "MY_ENV_VARIABLE=${{ secrets.ENV_FILE }}" >> .env
 
-    # Verify if .env file was created from action secrets
-    - name: Verifying if .env file was created from action secrets
-      run: test -f .env
+        # Verify if .env file was created from action secrets
+        test -f .env
 
-    # Exit the pipeline with an error if .env file doesn't exist
-    - name: Exiting the process if .env file does not exist
-      run: exit 1
-      if: ${{ failure() }}
+        # Exit the pipeline with an error if .env file doesn't exist
+        if [ $? -ne 0 ]; then
+          echo "Error: .env file does not exist."
+          exit 1
+        fi
 
     # Installation of Node packaging Manager (npm)
     - name: Installing project dependencies
