Minor modification to test

--- a/.github/workflows/Production-Branch-Pre-Merge-CI.yml
+++ b/.github/workflows/Production-Branch-Pre-Merge-CI.yml
@@ -40,12 +40,7 @@ jobs:
     - name: Setting up environment variables
       run: |
         echo "MY_ENV_VARIABLE=${{ secrets.ENV_FILE }}" >> .env
-
-        # Verify if .env file was created from action secrets
-        test -f .env
-
-        # Exit the pipeline with an error if .env file doesn't exist
-        if [ $? -ne 0 ]; then
+        if [ ! -f .env ]; then
           echo "Error: .env file does not exist."
           exit 1
         fi
