--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,11 +4,12 @@ services:
     build:
       dockerfile: Dockerfile
       context: ./
-    container_name: webserver
+    image: webserver-image:v1 # This will set the image name and tag while building the image from dockerfile using docker compose
+    container_name: webserver # This will set the container name while starting it from docker compose
     ports:
       - 3000:3000
     restart: on-failure
-    volumes:
-      - .:/app
+    # volumes:
+    #   - .:/app
     env_file:
       - ./.env
