--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "npx alwinsimon && node ./bin/www",
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "alwinsimon": "^1.0.1",
     "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
